# Adevnt-of-Code-in-Rust

./: .gitignore  Cargo.toml  README.md  template.txt
aoc/: Cargo.toml
aoc/src/: main.rs
aoc/src/aoc2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc/src/aoc2016/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs
aoc/src/aoc2017/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs
aoc/src/aoc2018/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  mod.rs
aoc/src/aoc2019/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
aoc/src/aoc2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aoc/src/aoc2021/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aoc/src/aoc2022/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aoc/src/aoc2023/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc/src/aoc2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aoc/src/aoc2025/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc/src/lib/: cli.rs  grid.rs  lib.rs  macros.rs  num.rs  point2d.rs
aoc_core/: Cargo.toml
aoc_core/src/: lib.rs
aoc_core/src/lib/: cli.rs  counter.rs  graph.rs  heap.rs  intcode.rs  interval.rs  io.rs  lib.rs  macros.rs  num.rs
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
src/: main.rs  temp.rs
src/aoc2015/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc2016/: day1.rs
src/aoc2020/: day1.rs  day10.rs  day13.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
src/aoc2021/: day15.rs
src/aoc2023/: day1.rs  day2.rs  day3.rs  day4.rs
src/lib/: cli.rs  date.rs  heap.rs  io.rs  lib.rs  macros.rs  num.rs
