[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[lib]
# proc-macro = true
# crate-type = ["proc-macro"]
name = "aoc"
path = "src/lib/lib.rs"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "cur"
path = "src/aoc2015/day22.rs"

[[bin]]
name = "temp"
path = "src/temp.rs"

[dependencies]
petgraph = "0.6.4"
md5 = "0.7.0"
itertools = "0.11.0"
regex = "1.10.2"
serde_json = "1.0.107"
shellexpand = "3.1.0"
lazy_static = "1.4.0"
clap = "4.4.6"
rustc-hash = "1.1.0"
rayon = "1.8.0"
hashbrown = "0.14.2"
ureq = "2.9.0"
