[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
default-run = "aoc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[lib]
name = "aoc"
path = "src/lib/lib.rs"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"


[dependencies]
itertools = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
petgraph = "0.6.4"
pico-args = "0.5.0"
rayon = "1.8.0"
regex-lite = "0.1.5"
rustc-hash = "1.1.0"
serde_json = "1.0.107"
shellexpand = "3.1.0"
ureq = "2.9.0"

