[package]
name = "aoc"
version = "0.2.0"
authors = ["Łukasz Bednarski"]
description = "Advent of Code solutions in Rust"
repository = "https://github.com/qoqosz/Adevnt-of-Code-in-Rust/"
readme = "../README.md"
edition = "2021"
default-run = "aoc"

[lib]
name = "aoc"
path = "src/lib/lib.rs"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"


[dependencies]
aoc_derive = { path = "../aoc_derive" }
itertools = "0.11.0"
lazy_static = "1.4.0"
md5 = "0.7.0"
petgraph = "0.6.4"
pico-args = "0.5.0"
rayon = "1.8.0"
regex-lite = "0.1.5"
rustc-hash = "1.1.0"
serde_json = "1.0.107"
shellexpand = "3.1.0"
ureq = "2.9.0"

