[package]
name = "aoc"
version = "0.2.0"
authors = ["Łukasz Bednarski"]
description = "Advent of Code solutions in Rust"
repository = "https://github.com/qoqosz/Adevnt-of-Code-in-Rust/"
readme = "../README.md"
edition = "2024"
default-run = "aoc"

[lib]
name = "aoc"
path = "src/lib/lib.rs"

[[bin]]
name = "download"
path = "src/bin/download.rs"

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"


[dependencies]
aoc_core = { path = "../aoc_core" }
aoc_derive = { path = "../aoc_derive" }
inventory = "0.3.15"
itertools = "0.13.0"
md5 = "0.7.0"
memoize = { version = "0.4.2", features = ["full"] }
num = "0.4.3"
petgraph = "0.6.5"
pico-args = "0.5.0"
regex-lite = "0.1.6"
rustc-hash = "2.0.0"
serde_json = "1.0.122"
shellexpand = "3.1.0"
ureq = "2.10.0"
rustworkx-core = "0.15.1"
glam = "0.28.0"
tinyvec = "1.8.0"
atoi = "2.0.0"
rstest = "0.22.0"
